--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "jwks-rsa": "^1.2.1",
     "morgan": "^1.9.0",
     "multer": "^1.3.0"
+  },
+  "devDependencies": {
+    "typescript": "^2.8.1"
   }
 }
