--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --inspect index.js",
+    "lint": "tslint -c tslint.json -p tsconfig.json",
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -29,6 +30,7 @@
     "multer": "^1.3.0"
   },
   "devDependencies": {
+    "tslint": "^5.9.1",
     "typescript": "^2.8.1"
   }
 }
