--- a/package.json
+++ b/package.json
@@ -2,11 +2,16 @@
   "name": "recipedx-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "dev": "nodemon --inspect index.js",
+    "build": "npm run build-ts",
+    "build-ts": "tsc",
+    "watch-ts": "tsc -w",
+    "dev": "npm run watch-ts & npm run dev:1",
+    "dev:1": "nodemon --inspect dist",
     "lint": "tslint -c tslint.json -p tsconfig.json",
-    "start": "node index.js",
+    "serve": "node dist/index.js",
+    "start": "npm run serve",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -30,6 +35,12 @@
     "multer": "^1.3.0"
   },
   "devDependencies": {
+    "@types/bcrypt-nodejs": "0.0.30",
+    "@types/body-parser": "^1.16.8",
+    "@types/dotenv": "^4.0.3",
+    "@types/express": "^4.11.1",
+    "@types/morgan": "^1.7.35",
+    "@types/node": "^9.6.4",
     "tslint": "^5.9.1",
     "typescript": "^2.8.1"
   }
