--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,6 @@
     "outDir": "dist",
     "target": "es2018",
     "esModuleInterop": true,
-    "noImplicitAny": true,
     "moduleResolution": "node",
     "sourceMap": true,
     "baseUrl": ".",
@@ -15,6 +14,6 @@
     },
   },
   "include": [
-    "src/**/*.js",
+    "src/**/*.ts",
   ],
 }
