--- a/package.json
+++ b/package.json
@@ -10,9 +10,23 @@
     "dev": "npm run watch-ts & npm run dev:1",
     "dev:1": "nodemon --inspect dist",
     "lint": "tslint -c tslint.json -p tsconfig.json",
+    "jest": {
+      "transform": {
+        "^.+\\.tsx?$": "ts-jest"
+      },
+      "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+      "moduleFileExtensions": [
+        "ts",
+        "tsx",
+        "js",
+        "jsx",
+        "json",
+        "node"
+      ]
+    },
     "serve": "node dist/index.js",
     "start": "npm run serve",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npm run jest"
   },
   "repository": {
     "type": "git",
@@ -39,8 +53,10 @@
     "@types/body-parser": "^1.16.8",
     "@types/dotenv": "^4.0.3",
     "@types/express": "^4.11.1",
+    "@types/jest": "^22.2.2",
     "@types/morgan": "^1.7.35",
     "@types/node": "^9.6.4",
+    "ts-jest": "^22.4.2",
     "tslint": "^5.9.1",
     "typescript": "^2.8.1"
   }
