--- a/package.json
+++ b/package.json
@@ -46,7 +46,10 @@
     "express-jwt": "^5.3.0",
     "jwks-rsa": "^1.2.1",
     "morgan": "^1.9.0",
-    "multer": "^1.3.0"
+    "multer": "^1.3.0",
+    "reflect-metadata": "^0.1.12",
+    "sequelize": "^4.37.6",
+    "sequelize-typescript": "^0.6.3"
   },
   "devDependencies": {
     "@types/bcrypt-nodejs": "0.0.30",
