--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "jwks-rsa": "^1.2.1",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
+    "mysql": "^2.15.0",
     "reflect-metadata": "^0.1.12",
     "sequelize": "^4.37.6",
     "sequelize-typescript": "^0.6.3"
