--- a/package.json
+++ b/package.json
@@ -39,11 +39,14 @@
   },
   "homepage": "https://github.com/VeysonD/recipedx-api#readme",
   "dependencies": {
+    "apollo-server": "^0.3.3",
+    "apollo-server-express": "^1.3.6",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "dotenv": "^5.0.1",
     "express": "^4.16.2",
     "express-jwt": "^5.3.0",
+    "graphql": "^0.13.2",
     "jwks-rsa": "^1.2.1",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
